@@ -1,5 +1,17 @@
 2008-09-20  kitone  <kitone@gna.org>
 
+	* src/actions/errorchecking/ErrorCheckingPlugin.cc:
+	* src/actions/errorchecking/MaxCharactersPerLine.h:
+	* src/actions/errorchecking/MaxLinePerSubtitle.h:
+	* src/actions/errorchecking/MinDisplayTime.h:
+	* src/actions/errorchecking/MinGapBetweenSubtitles.h:
+	* src/actions/errorchecking/Overlapping.h:
+	* src/actions/errorchecking/TooLongDisplayTime.h:
+	* src/actions/errorchecking/TooShortDisplayTime.h:
+	Fix: bold messages by Luboš Staněk.
+
+2008-09-20  kitone  <kitone@gna.org>
+
 	* src/SubtitleView.cc:
 	TimeCell derived to TextView widget.
 
